[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graal-agent-framework"
version = "1.1.0"
description = "Framework for building GRAAL conversational agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GRAAL Team", email = "contact@holygraal.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
keywords = ["fastapi", "agents", "conversational-ai", "microservices"]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0", 
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.3.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/graal-agent-framework"
Documentation = "https://github.com/your-org/graal-agent-framework#readme"
Repository = "https://github.com/your-org/graal-agent-framework.git"
Issues = "https://github.com/your-org/graal-agent-framework/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["graal*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"